[package]
name = "cape"
version = "0.1.0"
authors = ["jazzfool <saveuselon@gmail.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
description = "Core Cape library"
homepage = "http://github.com/jazzfool/cape/tree/master/cape"
repository = "http://github.com/jazzfool/cape"

[features]
default = ["skulpin_backend", "async"]
skulpin_backend = ["skulpin"]
async = ["tokio", "futures"]

[dependencies]
euclid = "0.22"
lazy_static = "1.4"
palette = "0.5"
image = "0.23"
font-kit = "0.10"
thiserror = "1.0"
topo = "0.13"
ordered-float = "2.1"
skulpin = { version = "0.11", default-features = false, features = [
    "skulpin_winit",
    "skia_shaper",
    "winit-24",
], optional = true }
winit = "0.24"
cape-macro = { path = "../cape-macro" }
fxhash = "0.2"
tokio = { version = "1.4", optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "node_resolve"
harness = false
